--- a/code/pure_pytorch/HyperView_Torch_1Param_Clean_ResNets_04_04_2022.ipynb
+++ b/code/pure_pytorch/HyperView_Torch_1Param_Clean_ResNets_04_04_2022.ipynb
@@ -62,7 +62,7 @@
      "data": {
       "text/html": [
        "\n",
-       "                    Syncing run <strong><a href=\"https://wandb.ai/jcharyton/HyperView-initial/runs/2zp84n0a\" target=\"_blank\">stellar-terrain-31</a></strong> to <a href=\"https://wandb.ai/jcharyton/HyperView-initial\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">docs</a>).<br/>\n",
+       "                    Syncing run <strong><a href=\"https://wandb.ai/jcharyton/HyperView-initial/runs/1174cugh\" target=\"_blank\">soft-tree-32</a></strong> to <a href=\"https://wandb.ai/jcharyton/HyperView-initial\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">docs</a>).<br/>\n",
        "\n",
        "                "
       ],
@@ -243,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset, validation_dataset = random_split(train_data_whole, [1400, 332], generator=torch.Generator().manual_seed(22))\n",
+    "train_dataset, validation_dataset = random_split(train_data_whole, [1000, 732], generator=torch.Generator().manual_seed(22))\n",
     "# train_dataset = torch.utils.data.Subset(train_data_whole, list(range(0, 1400)))\n",
     "# validation_dataset = torch.utils.data.Subset(train_data_whole, list(range(1400, len(train_data_whole))))"
    ]
@@ -842,7 +842,7 @@
     {
      "data": {
       "text/plain": [
-       "'checkpoint_state_dict_ResNet50_08_05_2022_Single_Parameter_pH'"
+       "'checkpoint_state_dict_ResNet50_09_05_2022_Single_Parameter_pH'"
       ]
      },
      "execution_count": 15,
@@ -851,7 +851,7 @@
     }
    ],
    "source": [
-    "save_name = \"checkpoint_state_dict_ResNet50_08_05_2022_Single_Parameter_{}\".format(parameter)\n",
+    "save_name = \"checkpoint_state_dict_ResNet50_09_05_2022_Single_Parameter_{}\".format(parameter)\n",
     "save_name"
    ]
   },
@@ -1117,7 +1117,7 @@
     "config.scheduler_patience = 5\n",
     "config.scheduler_threshold = 0.0001\n",
     "config.batch_size = BATCH_SIZE\n",
-    "config.notes = 'ResNet50 Parameter {}'.format(parameter)\n",
+    "config.notes = 'ResNet50 Parameter {} Training split:1000, Validation: 732'.format(parameter)\n",
     "config.parameter = parameter"
    ]
   },
@@ -1142,12 +1142,291 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f28d313762fe4e85a4c8424d074b7aee",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "epoch 0 training data:   0%|          | 0/116 [00:00<?, ?it/s]"
+       "epoch 0 training data:   0%|          | 0/83 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 0, LR: 0.01, train loss: 4.422056674957275, train MSE: [4.422056674957275]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "epoch 0 validation data:   0%|          | 0/61 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 0, validation loss: 0.1944793164730072, validation MSE: [0.1944793313741684]\n",
+      "Validation loss decreased (inf --> 0.194479).  Saving model ...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "epoch 1 training data:   0%|          | 0/83 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 1, LR: 0.01, train loss: 0.15095780789852142, train MSE: [0.15095782279968262]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "epoch 1 validation data:   0%|          | 0/61 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 1, validation loss: 0.17814508080482483, validation MSE: [0.17814508080482483]\n",
+      "Validation loss decreased (0.194479 --> 0.178145).  Saving model ...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "epoch 2 training data:   0%|          | 0/83 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 2, LR: 0.01, train loss: 0.13368888199329376, train MSE: [0.13368889689445496]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "epoch 2 validation data:   0%|          | 0/61 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 2, validation loss: 0.40638527274131775, validation MSE: [0.40638530254364014]\n",
+      "EarlyStopping counter: 1 out of 13\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "epoch 3 training data:   0%|          | 0/83 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 3, LR: 0.01, train loss: 0.11221041530370712, train MSE: [0.11221041530370712]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "epoch 3 validation data:   0%|          | 0/61 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 3, validation loss: 0.07774323225021362, validation MSE: [0.07774323225021362]\n",
+      "Validation loss decreased (0.178145 --> 0.077743).  Saving model ...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "epoch 4 training data:   0%|          | 0/83 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 4, LR: 0.01, train loss: 0.10959449410438538, train MSE: [0.10959449410438538]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "epoch 4 validation data:   0%|          | 0/61 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 4, validation loss: 0.08982399851083755, validation MSE: [0.08982399106025696]\n",
+      "EarlyStopping counter: 1 out of 13\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "epoch 5 training data:   0%|          | 0/83 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 5, LR: 0.01, train loss: 0.09851013123989105, train MSE: [0.09851012378931046]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "epoch 5 validation data:   0%|          | 0/61 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 5, validation loss: 0.09874051809310913, validation MSE: [0.09874053299427032]\n",
+      "EarlyStopping counter: 2 out of 13\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "epoch 6 training data:   0%|          | 0/83 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 6, LR: 0.01, train loss: 0.13377869129180908, train MSE: [0.13377869129180908]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6e7bfe40573546b2bbf2ce409bf2d31d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "epoch 6 validation data:   0%|          | 0/61 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
