Calculated and saved StandardScaler for output parameters in train_data

--- a/code/pure_pytorch/HyperView_Torch_PredictTest_1ParamModels_ResNets_10_05_2022.ipynb
+++ b/code/pure_pytorch/HyperView_Torch_PredictTest_1ParamModels_ResNets_10_05_2022.ipynb
@@ -2040,7 +2040,13 @@
    "cell_type": "code",
    "execution_count": 43,
    "id": "1a74b114-30de-4d0e-9fb6-f3ac86cdb186",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
