--- a/starter_pack_preprocess.ipynb
+++ b/starter_pack_preprocess.ipynb
@@ -4763,7 +4763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4772,7 +4772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -7962,6 +7962,413 @@
    ],
    "source": [
     "!zip -r tiffs_train.zip output_tiffs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Standardize values of predicted parameters and dump them to pickle file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from pickle import dump"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters = ['P', 'K', 'Mg', 'pH']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sample_index</th>\n",
+       "      <th>P</th>\n",
+       "      <th>K</th>\n",
+       "      <th>Mg</th>\n",
+       "      <th>pH</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>45.1</td>\n",
+       "      <td>188.0</td>\n",
+       "      <td>179.0</td>\n",
+       "      <td>7.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>44.8</td>\n",
+       "      <td>205.0</td>\n",
+       "      <td>188.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>44.4</td>\n",
+       "      <td>207.0</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>6.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>46.5</td>\n",
+       "      <td>204.0</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>6.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>212.0</td>\n",
+       "      <td>167.0</td>\n",
+       "      <td>6.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1727</th>\n",
+       "      <td>1727</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>6.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1728</th>\n",
+       "      <td>1728</td>\n",
+       "      <td>42.7</td>\n",
+       "      <td>192.0</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>6.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1729</th>\n",
+       "      <td>1729</td>\n",
+       "      <td>39.4</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>6.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1730</th>\n",
+       "      <td>1730</td>\n",
+       "      <td>37.3</td>\n",
+       "      <td>162.0</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>6.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1731</th>\n",
+       "      <td>1731</td>\n",
+       "      <td>29.5</td>\n",
+       "      <td>146.0</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>6.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1732 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      sample_index     P      K     Mg   pH\n",
+       "0                0  45.1  188.0  179.0  7.2\n",
+       "1                1  44.8  205.0  188.0  7.0\n",
+       "2                2  44.4  207.0  145.0  6.8\n",
+       "3                3  46.5  204.0  143.0  6.8\n",
+       "4                4  52.0  212.0  167.0  6.7\n",
+       "...            ...   ...    ...    ...  ...\n",
+       "1727          1727  40.8  133.0  132.0  6.2\n",
+       "1728          1728  42.7  192.0  126.0  6.5\n",
+       "1729          1729  39.4  180.0  122.0  6.5\n",
+       "1730          1730  37.3  162.0  127.0  6.5\n",
+       "1731          1731  29.5  146.0  133.0  6.3\n",
+       "\n",
+       "[1732 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gt_df = pd.read_csv(gt_path)\n",
+    "gt_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### Test scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[45.1],\n",
+       "       [44.8],\n",
+       "       [44.4],\n",
+       "       ...,\n",
+       "       [39.4],\n",
+       "       [37.3],\n",
+       "       [29.5]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_P = gt_df.loc[:, 'P'].values.reshape(-1, 1)\n",
+    "data_P"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "StandardScaler()"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaler.fit(data_P)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([29.49626555])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaler.scale_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([70.30265589])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaler.mean_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([870.02968117])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaler.var_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.85443548],\n",
+       "       [-0.86460626],\n",
+       "       [-0.8781673 ],\n",
+       "       ...,\n",
+       "       [-1.04768028],\n",
+       "       [-1.11887574],\n",
+       "       [-1.38331599]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_P_scaled = scaler.transform(data_P)\n",
+    "data_P_scaled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-5.743417032702889e-17"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_P_scaled.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_P_scaled.std()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loop over all parameters and save scaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter P mean: [70.30265589], scale: [29.49626555], var: [870.02968117]\n",
+      "Parameter K mean: [227.98851039], scale: [61.87411968], var: [3828.4066867]\n",
+      "Parameter Mg mean: [159.28123557], scale: [39.86031717], var: [1588.84488462]\n",
+      "Parameter pH mean: [6.7827194], scale: [0.26022296], var: [0.06771599]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for param in parameters:\n",
+    "    scaler = StandardScaler()\n",
+    "    data = gt_df.loc[:, param].values.reshape(-1, 1)\n",
+    "    \n",
+    "    scaler.fit(data)\n",
+    "    print(f'Parameter {param} mean: {scaler.mean_}, scale: {scaler.scale_}, var: {scaler.var_}')\n",
+    "    dump(scaler, open(f'train_data/standard_scaler_{param}.pkl', 'wb'))"
    ]
   },
   {
