Experiments with Hang2020

--- a/code/pure_pytorch/HyperView_Torch_1Param_Clean_ParamsScaling_Pretrained_3DResNets_18_05_2022.ipynb
+++ b/code/pure_pytorch/HyperView_Torch_1Param_Clean_ParamsScaling_Pretrained_3DResNets_18_05_2022.ipynb
@@ -397,7 +397,7 @@
     "            conv1_weight *= (3 / float(150))\n",
     "            conv1_weight = conv1_weight.to(conv1_dtype)\n",
     "            state_resnet['stem.0.weight'] = conv1_weight\n",
-    "            \n",
+    "            #TODO: Nie ładuje state dict! Załadować!\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.resnet_model(x)\n",
